--- a/Front-end of bank/package.json
+++ b/Front-end of bank/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "mtdbank3",
+  "name": "bankapp-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
-    "@testing-library/jest-dom": "^5.13.0",
+    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^5.0.1",
     "formik": "^2.2.6",
     "formik-material-ui": "^3.0.1",
-    "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
-    "react-router-dom": "5.2.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "react-scroll-to-top": "^1.0.5",
-    "react-toastify": "^6.2.0",
-    "reactstrap": "^8.7.1",
-    "styled-components": "^5.2.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.8"
   },
@@ -48,9 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "file-loader": "^6.2.0",
-    "url-loader": "^4.1.1"
   }
 }
