--- a/Front-end of bank/package.json
+++ b/Front-end of bank/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.0.1",
     "formik": "^2.2.6",
     "formik-material-ui": "^3.0.1",
+    "font-awesome": "^4.7.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
@@ -21,7 +22,8 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.1.2",
-    "yup": "^0.32.8"
+    "yup": "^0.32.8",
+    "react-router-hash-link": "^2.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
